--- a/src/components/VideoBG.astro
+++ b/src/components/VideoBG.astro
@@ -1,7 +1,7 @@
 ---
 const { videoId } = Astro.props;
 ---
-<style>
+<style is:global>
 #video-background {
     position: fixed;
     top: 0;
@@ -32,22 +32,20 @@ filter: invert(0);
 </style>
 
 <div id="video-background">
-<!---
+    <!---
     <iframe src={`https://player.vimeo.com/video/${videoId}?background=1&controls=0&autoplay=1&loop=1&autopause=0&muted=1`} frameborder="0"
         allow="autoplay; fullscreen" allowfullscreen>
     </iframe>
     --->
 
-    <video src="/images/SOUNDBODY VISUAL RECORDING 3 - x264 18Q.mp4"></video>
-    
-<div id="video-background">
-  <video 
-    src="/images/video.mp4"
-    autoplay
-    muted
-    loop
-    playsinline
-  ></video>
-</div>
+    <div id="video-background">
+    <video 
+        src="/images/video.mp4"
+        autoplay
+        muted
+        loop
+        playsinline
+    ></video>
+    </div>
 </div>
 
