set up github actions

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -30,7 +30,7 @@ import ThemeIcon from "./ThemeIcon.astro";
   <div class="overlay" id="overlay"></div>
 </header>
 
-<style is:global>
+<style>
 .navbar {
   display: flex;
   justify-content: space-between;
