--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -32,7 +32,7 @@ const { title, subtitle, description, image, video, slug, year } = Astro.props;
         </div>
       )}
 
-      <div class="overlay">
+      <div class="card-overlay">
         <h3 class="card-title">{title} <span class="year">| {year}<span> </h3>
         <!--- {description && <p class="card-description">{description}</p>} --->
       </div>
@@ -92,7 +92,7 @@ const { title, subtitle, description, image, video, slug, year } = Astro.props;
   color: #64748b;
 }
 
-.overlay {
+.card-overlay {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -114,7 +114,7 @@ const { title, subtitle, description, image, video, slug, year } = Astro.props;
   line-height: 1.3;
 }
 
-.overlay .year {
+.card-overlay .year {
   font-weight: 300;
 }
 </style>
