--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -106,6 +106,7 @@ const { title, subtitle, description, image, video, slug, year } = Astro.props;
   font-size: 1.25rem;
   font-weight: 600;
   margin: 0 0 0.25rem 0;
+  color: white;
 }
 
 .card-description {
