updated video bg

--- a/src/components/VideoBG.astro
+++ b/src/components/VideoBG.astro
@@ -4,7 +4,7 @@ const { videoId } = Astro.props;
 
 <div id="video-background">
 <video 
-    src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+    src="/images/video-fixed.mp4"
     autoplay
     muted
     loop
