--- a/src/components/VideoBG.astro
+++ b/src/components/VideoBG.astro
@@ -4,7 +4,7 @@ const { videoId } = Astro.props;
 
 <div id="video-background">
 <video 
-    src="/images/video-fixed.mp4"
+    src="https://pub-59c214a33be94398ba879fa1a46bbed3.r2.dev/video.mp4"
     autoplay
     muted
     loop
