added backup video

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,6 +12,7 @@ import ThemeIcon from "./ThemeIcon.astro";
       <ul>
         <li><a href="/projects">projects</a></li>
         <li><a href="/workshops">workshops</a></li>
+        <li><a href="/blog">blog</a></li>
         <li><a href="/press-kit">press kit</a></li>
         <li><a href="/connect">connect</a></li>
       </ul>
