--- a/src/components/VideoBG.astro
+++ b/src/components/VideoBG.astro
@@ -9,6 +9,7 @@ const { videoId } = Astro.props;
     muted
     loop
     playsinline
+    poster="/images/Screenshot 2025-10-21 214451.png"
 ></video>
 </div>
 
