--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -35,7 +35,7 @@ const {
 // Construct full URLs
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const imageURL = new URL(image, Astro.site);
-const fullTitle = `${title} | Superradiance Lab`;
+const fullTitle = `${title} | Milana Aernova`;
 ---
 
 <html lang="en">
