--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -88,7 +88,8 @@ function formatDate(date: string) {
 
     .blog-post {
         padding: 3rem 0;
-        min-height: calc(100vh - 5rem);
+        min-height: 100%;
+        background-color: black;
     }
 
     .container {
