--- a/src/pages/connect.astro
+++ b/src/pages/connect.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Section from "../components/Section.astro";
 import ContactForm from "../components/ContactForm.astro";
 
-const title = "Milana Aernova";
+const title = "Milana Aernova - Contact";
 ---
 
 <BaseLayout>
