--- a/src/pages/workshops/index.astro
+++ b/src/pages/workshops/index.astro
@@ -68,8 +68,9 @@ const allTags = [...new Set(
 
 <style>
   .workshops-page {
-     margin-top: 7rem;
+     padding-top: 7rem;
      min-height: calc(100vh - 7rem);
+     background-color: var(--bg-color);
   }
 
   .page-header {
