--- a/src/pages/connect.astro
+++ b/src/pages/connect.astro
@@ -3,10 +3,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Section from "../components/Section.astro";
 import ContactForm from "../components/ContactForm.astro";
 
-const title = "Milana Aernova - Contact";
+const title = "Connect | Milana Aernova";
 ---
 
-<BaseLayout>
+<BaseLayout title={title}>
   <div class="connect-container">
     <Section id="top" />
       <h1 class="page-title">Connect with Me</h1>
