--- a/src/pages/press-kit.astro
+++ b/src/pages/press-kit.astro
@@ -16,9 +16,10 @@ const ArtistStatementContent = artistStatement[0]?.Content;
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Press Kit - Milana Aernova</title>
+    <title>Press Kit | Milana Aernova</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
 </head>
 <body>
 
@@ -43,12 +44,12 @@ const ArtistStatementContent = artistStatement[0]?.Content;
                     <div class="photo-card">
                        <div class="photo-card">
                         <img 
-                            src="/images/Space_Rising_04856_By Hana Tobias.jpg" 
+                            src="/images/_51A2719-Enhanced-NR.jpg" 
                             alt="Milana Aernova Movement Shot" 
                             class="press-photo"
                         />
-                        <a href="/images/Space_Rising_04856_By Hana Tobias.jpg" download class="download-btn">Download High-Res</a>
-                        <p class="credit-line">Photo credit: <a href="https://www.hanatobias.com/" target="_blank">Hana Tobias</a></p>
+                        <a href="/images/_51A2719-Enhanced-NR.jpg" download class="download-btn">Download High-Res</a>
+                        <p class="credit-line">Photo credit: <a href="https://sanchezproductions.mypixieset.com/" target="_blank">Sanchez Productions</a></p>
                     </div>
                 </div>
             </section>
