--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -89,7 +89,7 @@ function formatDate(date: string) {
     .blog-post {
         padding: 3rem 0;
         min-height: 100%;
-        background-color: black;
+        background-color: var(--bg-color);
     }
 
     .container {
