--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const recentBlogs = allBlogPosts
     <Section id="about" title="" />
      <div class="about-container">
         <div class="about-image">
-          <img src="/images/MilanaHeadshot.jpg" alt="Milana Aernova" />
+          <img src="/low-res-images/MilanaHeadshot.jpg" alt="Milana Aernova" />
         </div>
         <div class="about-text">
           <HelloStatementContent />
