--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -157,6 +157,12 @@ import ThemeIcon from "./ThemeIcon.astro";
   }
 }
 
+@media (max-width: 350px) {
+  .logo h1 a {
+    font-size: 1.3rem;
+  }
+}
+
 @media screen and (max-width: 1000px) {
     .nav-controls {
         gap: 25px; /* Add spacing between theme icon and hamburger */
