--- a/src/pages/connect.astro
+++ b/src/pages/connect.astro
@@ -23,7 +23,10 @@ const title = "Connect | Milana Aernova";
      min-height: 100vvh;
      margin: 0 auto;
      max-width: 80ch;
-     
+  }
+
+  .page-title {
+    padding-top: 3rem;
   }
   
   @media (max-width: 728px) {
